# hyperwisor_esp_idf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  hyperwisor.h  hyperwisor_cmd.c  hyperwisor_cmd.h  hyperwisor_core.c  hyperwisor_core.h  hyperwisor_gpio.c  hyperwisor_gpio.h  hyperwisor_hsc.c  hyperwisor_hsc.h  hyperwisor_http.c  hyperwisor_http.h  hyperwisor_ntp.c  hyperwisor_ntp.h  hyperwisor_nvs.c  hyperwisor_nvs.h  hyperwisor_ota.c  hyperwisor_ota.h  hyperwisor_port.c  hyperwisor_port.h  hyperwisor_widget.c  hyperwisor_widget.h  hyperwisor_wifi.c  hyperwisor_wifi.h  hyperwisor_ws.c  hyperwisor_ws.h  idf_component.yml
examples/hello_hyperwisor/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/hello_hyperwisor/main/: idf_component.yml  main.c
examples/secure_hyperwisor/: CMakeLists.txt  sdkconfig.defaults
examples/secure_hyperwisor/main/: main.c
partitions/: partitions_16mb_ota.csv  partitions_4mb_ota.csv  partitions_8mb_ota.csv
